Set correct contrast text colours

--- a/frontend/styles/variables.scss
+++ b/frontend/styles/variables.scss
@@ -50,6 +50,9 @@ $danger: $red;
 $light: $gray-200;
 $dark: $gray-800;
 
+$yiq-text-dark:             $blue-800;
+$yiq-text-light:            $white;
+
 $body-color: $black;
 $navbar-light-color: $black;
 $component-active-color: $white;
